# kdebase-workspace

./: Makefile  README.md  kdebase-workspace-4.3.4-bz#587917-icons.patch  kdebase-workspace-4.3.4-bz#749460.patch  kdebase-workspace-4.3.4-graphicssystem-bz#1098949.patch  kdebase-workspace-4.3.4-kdm-bz649345.patch  kdebase-workspace-4.3.4-kdm-rootimage.patch  kdebase-workspace-4.3.4-ksysguard-bz#639359.patch  kdebase-workspace-4.3.4-powerdevil.patch  kdebase-workspace-4.3.5-fixed-closing-of-windows-in-task-applet.patch  kdebase-workspace-avoid-periodic-logging-of-errors.patch  kdebase-workspace-be-sure-panel-is-resized-when-needed.patch  kdebase-workspace-fix-crash-in-task-manager.patch  kdebase-workspace-ksysguard-fix-logging.patch  kdebase-workspace-rhbz#1043480-kwin-reposition-ofscreen-windows.patch  kdebase-workspace.spec
src/doc/PolicyKit-kde/: index.cache.bz2
src/wallpapers/: CMakeLists.txt
src/wallpapers/Aghi/: metadata.desktop
src/wallpapers/Air/: metadata.desktop
src/wallpapers/Atra_Dot/: metadata.desktop
src/wallpapers/Code_Poets_Dream/: metadata.desktop
src/wallpapers/Curls_on_Green/: metadata.desktop
src/wallpapers/EOS/: metadata.desktop
src/wallpapers/Evening/: metadata.desktop
src/wallpapers/Fields_of_Peace/: metadata.desktop
src/wallpapers/Finally_Summer_in_Germany/: metadata.desktop
src/wallpapers/Fresh_Morning/: metadata.desktop
src/wallpapers/Plasmalicious/: metadata.desktop
src/wallpapers/Red_Leaf/: metadata.desktop
src/wallpapers/Spring_Sunray/: metadata.desktop
src/wallpapers/The_Rings_of_Saturn/: metadata.desktop
(+34 files in other folders)
